--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,23 +1,32 @@
 name: Flujo de trabajo de CI
+
 on:
   push:
-    branches: push en la rama principal
-    branches: pull_request en la rama principal
+    branches: [ main ]          # push en la rama principal
+  pull_request:
+    branches: [ main ]          # pull_request hacia la rama principal
+
 jobs:
   build:
     runs-on: ubuntu-latest
     container: python:3.9-slim
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Instalar dependencias
         run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          # Asegura flake8 y nose por si no están en requirements.txt
+          pip install flake8 nose nose-spec coverage
+
       - name: Lint con flake8
         run: |
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics 
+          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
+
       - name: Ejecutar pruebas unitarias con nose
         run: |
-          nosetests -v --with-spec --spec-color --with-coverage --cover-package=app    
+          nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
